--- a/SpiralFastLoop/pyproject.toml
+++ b/SpiralFastLoop/pyproject.toml
@@ -21,7 +21,36 @@ classifiers = [
 
 [project.optional-dependencies]
 extras = ["transformers>=4.40"]
+dev = [
+  "pytest>=8.0",
+  "mypy>=1.9",
+  "flake8>=7.0",
+]
 
 [project.urls]
 Homepage = "https://github.com/your-user/SpiralFastLoop"
 Repository = "https://github.com/your-user/SpiralFastLoop"
+
+[tool.mypy]
+python_version = "3.9"
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_return_any = true
+warn_unused_configs = true
+warn_unused_ignores = true
+strict_equality = true
+allow_redefinition = false
+
+[[tool.mypy.overrides]]
+module = ["tests.*"]
+ignore_errors = true
+
+[[tool.mypy.overrides]]
+module = ["transformers", "transformers.*"]
+ignore_missing_imports = true
+
+[tool.flake8]
+max-line-length = 120
+extend-ignore = ["E203", "E302", "E305", "E402", "E501", "W503"]
