--- a/SpiralFastLoop/pyproject.toml
+++ b/SpiralFastLoop/pyproject.toml
@@ -21,7 +21,67 @@ classifiers = [
 
 [project.optional-dependencies]
 extras = ["transformers>=4.40"]
+dev = [
+    "black>=24.4.0",
+    "flake8>=7.0.0",
+    "flake8-bugbear>=24.2.6",
+    "hypothesis>=6.99.0",
+    "isort>=5.13.0",
+    "mypy>=1.10.0",
+    "pre-commit>=3.7.0",
+    "pytest>=8.1.0",
+    "pytest-cov>=5.0.0",
+]
 
 [project.urls]
 Homepage = "https://github.com/your-user/SpiralFastLoop"
 Repository = "https://github.com/your-user/SpiralFastLoop"
+
+[tool.black]
+line-length = 88
+target-version = ["py39"]
+
+[tool.isort]
+profile = "black"
+line_length = 88
+known_first_party = ["spiralfastloop"]
+combine_as_imports = true
+
+[tool.flake8]
+max-line-length = 88
+extend-ignore = ["E203"]
+select = ["C", "E", "F", "W", "B", "B9"]
+per-file-ignores = {}
+
+[tool.mypy]
+python_version = "3.9"
+packages = ["spiralfastloop"]
+strict = true
+warn_return_any = true
+warn_unused_configs = true
+warn_unused_ignores = true
+
+[[tool.mypy.overrides]]
+module = ["transformers", "transformers.*"]
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = [
+    "spiralfastloop.utils",
+    "spiralfastloop.engine",
+    "spiralfastloop.extras.surprisal_sandwich",
+]
+ignore_errors = true
+
+[tool.pytest.ini_options]
+minversion = "8.1"
+addopts = "--strict-config --strict-markers --disable-warnings --maxfail=1"
+testpaths = ["tests"]
+
+[tool.coverage.run]
+branch = true
+source = ["spiralfastloop"]
+
+[tool.coverage.report]
+show_missing = true
+skip_covered = true
